--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.theme.default.min.css">
     <!-- Theme style  -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/skeleton.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
 
     <!-- Modernizr JS -->
     <script src="%PUBLIC_URL%/js/modernizr-2.6.2.min.js"></script>
